# vaybooks-retail-standalone

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  convert-icon.js  create-ico.js  create_icon.ps1  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/server/: .env.example  INTEGRATION-TESTS-FINAL.md  INTEGRATION-TESTS-SUMMARY.md  TEST-CONFIG-SUMMARY.md  TESTING.md  jest.config.js  package.json  tsconfig.json  tsconfig.test.json  tsconfig.test.tsbuildinfo  tsconfig.tsbuildinfo
apps/server/migrations/: 001_initial_schema.sql  migration.json  test.db
apps/server/prisma/: schema.prisma  test.db
apps/server/prisma/data/: vaybooks.db  vaybooks.db-journal
apps/server/src/: app.ts  server.ts
apps/server/src/core/: config.ts  database.ts  errors.ts  index.ts  repository.ts  types.ts
apps/server/src/middleware/: logger.ts  validation.ts
apps/server/src/scripts/: seed.ts  verify-seed.ts
apps/server/src/seeds/: addresses.seed.ts  customers.seed.ts  index.ts  master-data.seed.ts
apps/web/: index.html  next.config.js  package.json  tailwind.config.js  test.css  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/.next/: app-build-manifest.json  trace
apps/web/.next/server/: app-paths-manifest.json  (+3 more)
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  navigation.ts  utils.ts
apps/web/src/: App.tsx
(+131 files in other folders)
