[package]
name = "vaybooks-desktop"
version = "1.0.0"
description = "VayBooks Retail Standalone Desktop Application"
authors = ["VayBooks Team"]
license = "Proprietary"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "os-all", "path-all", "process-all", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "vaybooks-desktop"
path = "src/main.rs"
